<resources>
    <string name="app_name">Career.Habr</string>
    <string name="item_search">Поиск</string>
    <string name="search_hint">kotlin</string>
    <string name="remote">Можно удалённо</string>
    <string name="salary_shown">Зарплата указана</string>
    <string name="item_salary">Зарплата</string>
    <string name="skill">Квалификация</string>
    <string name="any_skill">Любая</string>
    <string-array name="skills">
        <item>Любая</item>
        <item>Стажёр(Intern)</item>
        <item>Младший(Junior)</item>
        <item>Средний(Middle)</item>
        <item>Старший(Senior)</item>
        <item>Ведущий(Lead)</item>
    </string-array>
    <string name="share_vacancy">Поделиться</string>
    <string name="about_vacancy">Подробнее о вакансии:</string>
    <string name="liked_vacancy_title">Понравившиеся</string>
    <string name="liked_null">Нет понравившихся вакансий :(</string>
    <string name="search_null">Поиск ничего не нашёл :( \n Или нет интернета</string>
    <string name="like">Нравится</string>
    <string name="notification_title">Уведомления</string>
    <string name="notification_hint">Присылать уведомления о новых вакансиях?</string>
    <string name="notification_no">Не уведомляю</string>
    <string name="notification_yes">Уведомляю</string>
    <string name="notify_channel_name">Новые вакансии</string>
    <string name="notify_title">Хабр Карьера</string>
    <string name="notify_vacancy">Найдена новая вакансия</string>
    <string name="notify_vacancies_start">Найдено</string>
    <string name="notify_vacancies_2_4">новые вакансии</string>
    <string name="notify_vacancies_5_10">новых вакансий</string>
    <string name="notify_vacancies_more">Найдено много новых вакансий</string>
</resources>